# MuSViT

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
experiments/: __init__.py
experiments/embeddings_test/: __init__.py  classifier_sklearn.py  data_generator.py  distances.py  entrypoint.py  metrics_utils.py  model_sets.py  run_embedding_analysis.py
experiments/full_page_omr/: __init__.py  _globals.py  data.py  entrypoint.py  finetune.py  smt_trainer.py
experiments/full_page_omr/Generator/: SynthGenerator.py  __init__.py
experiments/full_page_omr/config/: ExperimentConfigWrapper.py
experiments/full_page_omr/data_augmentation/: _globals.py  data_augmentation.py
experiments/full_page_omr/smt_foundation/: __init__.py  configuration_smt.py  modeling_smt.py
experiments/object_detection/: musvit_backbone.py  musvit_frcnn.py  token_grid.py  train.py
experiments/staff_level_omr/: README.md  arguments.py  augments.py  config.py  datasets.py  executions.sh  model.py  train.py
experiments/staff_level_omr/utils/: data_utils.py  utils.py
musvit/: __init__.py  cli.py  env.py
