[project]
name = "smt-foundationvision"
version = "0.1.0"
description = "MuSViT: a foundation vision model for sheet music representation"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "cairosvg>=2.7.1",
    "datasets>=3.3.1",
    "dotenv>=0.9.9",
    "editdistance>=0.8.1",
    "fire>=0.7.0",
    "fvcore>=0.1.5",
    "huggingface-hub>=0.30.0",
    "lightning>=2.5.0.post0",
    "loguru>=0.7.3",
    "names>=0.3.0",
    "numpy>=1.26",
    "opencv-python>=4.11.0.86",
    "pandas>=2.0",
    "pillow>=10.0",
    "rich>=13.9.4",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "torch>=2.6.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.21.0",
    "transformers>=4.49.0",
    "verovio==5.0.0",
    "wand>=0.6.13",
    "wandb>=0.19.6",
    "wonderwords>=2.2.0",
]

[project.scripts]
musvit = "musvit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Build only the first-party packages; the experiment folders are plain
# directories, not auto-discoverable packages.
packages = ["musvit", "experiments"]

[tool.hatch.build.targets.sdist]
include = ["musvit", "experiments", "README.md", "pyproject.toml"]

[tool.uv]
package = true
